--- a/style.css
+++ b/style.css
@@ -24,6 +24,138 @@
 
 }
 
-* {
+@font-face {
+    font-family: 'montserratsemibold';
+    src: url('fonts/montserrat-semibold-webfont.woff2') format('woff2'),
+         url('fonts/montserrat-semibold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+body {
 	font-family: 'montserratregular';
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+.wrap__header {
+    font-family: 'montserratsemibold';
+    padding-top: 20px;
+}
+.logo {
+    width: 100%;
+    height: 100%;
+}
+.header__logo {
+    margin-left: 42px;
+}
+.menu__item, .header__reg {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+.menu__link a, .reg__link a {
+    color: #000000;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 15px;
+    margin-left: 30px;
+}
+.header__reg {
+    padding: 0;
+    margin-left: 20px;
+    align-items: flex-end;
+}
+.header__reg_menu {
+    margin-right: 50px;
+}
+.banner {
+    background-image: url(img/logo_background.png);
+    background-repeat: no-repeat;
+    text-align: center;
+}
+.banner h1 {
+    font-family: 'montserratsemibold';
+    font-size: 90px;
+    margin-top: 50px;
+    margin-bottom: 0;
+    line-height: 110px;
+}
+.banner p {
+    font-size: 15px;
+    margin-top: 0;
+    line-height: 18px;
+}
+.banner__img {
+    width: 968px;
+    height: 450px;
+}
+.wrap {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+.char {
+    margin: 0 20px;
+    display: flex;
+    align-items: center;
+}
+.char__item {
+    margin-right: 5px;
+}
+.char__item_left {
+    margin-left: 80px;
+}
+.charset__first {
+    margin-right: 0 5px 5px 0;
+    display: flex;
+    align-items: flex-end;
+}
+.char__up_big {
+    font-family: 'montserratsemibold';
+    font-size: 35px;
+}
+.char__up_mini {
+    font-family: 'montserratsemibold';
+    font-size: 20px;
+}
+.charset__second {
+    margin-top: 0;
+    font-size: 12px;
+}
+.char__button {
+    margin-left: 25px;
+    display: flex;
+    align-items: center;
+    padding: 10px 38px;
+    border: 2px solid white;
+    font-size: 13px;
+}
+.char__btn_test {
+    margin-left: 50px;
+    border: none;
+    font-size: 13px;
+    text-transform: uppercase;
+    display: flex;
+}
+.test__text {
+    font-family: 'montserratsemibold';
+    vertical-align: middle;
+}
+.char__btn_red {
+    font-family: 'montserratsemibold';
+    margin-left: 30px;
+    color: #E51937;
+    font-weight: bold;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px 38px;
+    border: 2px solid #E51937;
+    text-transform: uppercase;
+}
+.arrow__down {
+    margin-top: 40px;
+    text-align: center;
 }
