--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     width: 100%;
     margin: 0;
 }
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -125,9 +129,6 @@ li.menu__link_red a::before {
     margin-top: 0;
     line-height: 5px;
 }
-/* .char__img_mini {
-    display: none;
-} */
 .char {
     display: flex;
     justify-content: center;
@@ -196,8 +197,123 @@ li.menu__link_red a::before {
     margin-top: 40px;
     text-align: center;
 }
-.raiting__img {
-    width: 50%;
+
+/* Вторая часть сайта */
+.container__future {
+    display: flex;
+    justify-content: space-between;
+    background-image: url(img/background.png);
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    margin-top: 20px;
+
+}
+.future__title {
+    display: inline-block;
+    color: #E51937;
+    font-size: 70px;
+    font-family: 'montserratsemibold';
+    margin-left: 75px;
+
+}
+.future__sdb {
+    max-width: 340px;
+    max-height: 900px;
+    background-color: #E51937;
+    color: #fff;
+    padding: 30px 50px;
+}
+.sdb__title {
+    font-size: 30px;
+}
+.sdb__text {
+    font-size: 15px;
+    line-height: 18px;
+}
+.form__btn {
+    font-family: 'montserratsemibold';
+    color: #fff;
+    background-color: #E51937;
+    font-weight: bold;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px 38px;
+    margin-left: 30px;
+    border: 2px solid #fff;
+    text-transform: uppercase;
+}
+.future__btn {
+    border: none;
+    color: #fff;
+    font-size: 13px;
+    background-color: #E51937;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+}
+.future__form {
+    display: flex;
+    margin-top: 150px;
+}
+.info__section_flex {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+}
+.info__title_big {
+    font-size: 35px;
+    /* font-family: 'montserratsemibold'; */
+}
+.info__title_mini {
+    font-size: 20px;
+    margin: 0;
+    /* font-family: 'montserratsemibold'; */
+}
+.info__text_down {
+    font-size: 12px;
+    margin: 0;
+}
+.info__section_text {
+    margin-left: 20px;
+}
+.form__img {
+    margin-right: 10px;
+}
+.raiting__list_item {
+    font-size: 17px;
+    text-transform: uppercase;
+}
+.star__title {
+    font-size: 50px;
+    margin-bottom: 2px;
+    margin-top: 20px;
+}
+.star__subtitle {
+    font-size: 25px;
+    margin-top: -10px;
+}
+.star__container {
+    display: flex;
+}
+.raiting__text {
+    margin: 3px 0;
+}
+.raiting__star {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+}
+.raiting__list_item {
+    margin: 15px 0;
+}
+.raiting__list_star {
+    margin: 12px 0;
+}
+.raiting__star_text {
+    margin-left: 20px;
+}
+.raiting__margin {
+    margin-bottom: 40px;
 }
 @media (max-width: 1024px) {
     .header__menu, .header__reg {
