--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'montserratbold';
     src: url('fonts/montserrat-bold-webfont.eot');
     src: url('fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
@@ -9,7 +9,7 @@
     font-weight: normal;
     font-style: normal;
 
-}
+} */
 
 @font-face {
     font-family: 'montserratregular';
